--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ highlighter: pygments
 title:       "SinglePaged - Simple Jekyll template"
 keywords:    "SinglePaged, jekyll, template, github, blog, single page"
 description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
-source_link: "https://github.com/t413/SinglePaged"
+source_link: "https://github.com/SheffieldML/GPyOpt"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
 google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
