--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,10 @@
 [build_sphinx]
 source-dir = docs/source
-build-dir  = docs/build
-all_files  = 1
+build-dir = docs/build
+all_files = 1
 
 [upload_sphinx]
 upload-dir = docs/build/html
+
+[easy_install]
+
