--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
 - pip install codecov
 - pip install pypandoc
 - pip install git+git://github.com/BRML/climin.git
+- pip install GPy
 - python setup.py develop
 
 skip_cleanup: true
