--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [build_sphinx]
-source-dir = docs/source
-build-dir = docs/build
+source-dir = docs
+build-dir = docs/_build
 all_files = 1
 
 [upload_sphinx]
-upload-dir = docs/build/html
+upload-dir = docs/_build/html
 
 [easy_install]
 
