--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://sheffieldml.github.io/GPyOpt"
-baseurl: ""
+#url: "http://sheffieldml.github.io/GPyOpt"
+#baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
+url: "http://sheffieldml.github.io/GPyOpt"
+baseurl: "/GPyOpt"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
