--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: "/GPyOpt"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: GPyOpt
+title: GitHub Repository
 
 # Short description of your site
 description: Python package for Bayesian optimization
