--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: "/GPyOpt"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: GitHub Repository
+title: GPyOpt
 
 # Short description of your site
 description: Python package for Bayesian optimization
@@ -30,7 +30,7 @@ navbar-links:
     - Reference Manual : "tutorial.html"
     - Community: "forum.html"
     - Citation: "citation.html"
-  News: "news.html"
+  News: "news/index.html"
   Contact: "contact.html"
 
 # Image to show in the navigation bar - image must be a square (width = height)
