--- a/_config.yml
+++ b/_config.yml
@@ -25,13 +25,13 @@ description: Python package for Bayesian optimization
 navbar-links:
   Home: "index.html"
   Resources:
-    - Installation: "firststeps.html"
-    - First steps: "firstexamples.html"
-    - Reference Manual : "tutorial.html"
-    - Community: "forum.html"
-    - Citation: "citation.html"
+    - Installation: "firststeps/index.html"
+    - First steps: "firstexamples/index.html"
+    - Reference Manual : "tutorial/index.html"
+    - Community: "forum/index.html"
+    - Citation: "citation/index.html"
   News: "news/index.html"
-  Contact: "contact.html"
+  Contact: "contact/index.html"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
