--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ navbar-links:
     - Citation: "citation/index.html"
   News: "news/index.html"
   Contact: "contact/index.html"
+  Repo: "http://github.com/SheffieldML/GPyOpt"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
