--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-  - pip install .
+  - pip install .[optimizer]
 # command to run tests
 script:
 - coverage run travis_tests.py
