--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ python:
   - "3.5"
   - "3.6"
 # command to install dependencies
+
+before_install:
+  - sudo apt-get install -y gfortran
+
 install:
   - pip install -r requirements.txt
   - pip install .[optimizer]
