--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,9 @@ python:
   - "3.6"
 # command to install dependencies
 
-before_install:
-  - sudo apt-get install -y gfortran
-
 install:
   - pip install -r requirements.txt
-  - pip install .[optimizer]
+  - pip install .
 # command to run tests
 script:
 - coverage run travis_tests.py
